tests/ui/consts/const-eval/heap/alloc_intrinsic_errors.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/alloc_intrinsic_errors.rs:5:18
   |
LL | const FOO: i32 = foo();
   |                  ^^^^^ invalid align passed to `const_allocate`: 3 is not a power of 2
   |
note: inside `foo`
  --> $DIR/alloc_intrinsic_errors.rs:8:17
   |
LL |         let _ = intrinsics::const_allocate(4, 3) as *mut i32;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
